--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Mansill Smith
-description: Keep in touch with my past, present and future projects!
+description: Third Year Software Engineering Student at The University of Waikato
