--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 theme: jekyll-theme-minimal
 title: Mansill Smith
 description: Third Year Software Engineering Student at The University of Waikato
+logo: /images/dp.jpg
+
+owner:
+  name: Mansill Smith
+  avatar: /images/dp.jpg
+  bio: "Mansill Smith's Website"
+  email: mansill.smith@xtra.co.nz
+  linkedin: mansillsmith
+  github: MansillSmith
